--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola Daniel</p>
+    <p>Hola Daniel, esta es la segunda versión del primer proyecto GIT :D</p>
 </body>
 </html>
